split jvm into each component and fix idea installation